[gd_scene load_steps=9 format=3 uid="uid://cth1ggx0o5w0h"]

[ext_resource type="Script" path="res://OldPlayer/Oldplayer.gd" id="1_fk0ya"]
[ext_resource type="Texture2D" uid="uid://dvurqrty63r3i" path="res://icon.svg" id="2_8k47o"]
[ext_resource type="Shape2D" uid="uid://c2v0wuu0lu3ld" path="res://OldPlayer/player_original_collision_shape.tres" id="3_bfnov"]

[sub_resource type="Animation" id="Animation_cp1jt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ii65q"]
resource_name = "attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(22, 0), Vector2(15, 0), Vector2(5, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(22, 0), Vector2(15, 0), Vector2(5, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ygy53"]
_data = {
"RESET": SubResource("Animation_cp1jt"),
"attack": SubResource("Animation_ii65q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aundm"]
size = Vector2(129, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fifsd"]
size = Vector2(133.5, 118)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_fk0ya")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 0)
scale = Vector2(0.96875, 1)
texture = ExtResource("2_8k47o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ygy53")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 0)
shape = ExtResource("3_bfnov")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_aundm")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-5.75, 0)
shape = SubResource("RectangleShape2D_fifsd")
disabled = true

[node name="Timer" type="Timer" parent="Hitbox"]
wait_time = 0.05
one_shot = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Hitbox/Timer" to="." method="_on_timer_timeout"]
